// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Update props with added prop 1`] = `
{
  "instanceId": [
    {
      "id": "propId",
      "prop": "a",
      "type": "string",
      "value": "1",
    },
  ],
}
`;

exports[`Update props with empty updates 1`] = `
{
  "instanceId": [],
}
`;

exports[`Update props with renamed prop name 1`] = `
{
  "instanceId": [
    {
      "id": "propId",
      "prop": "b",
      "required": undefined,
      "type": "string",
      "value": "1",
    },
  ],
}
`;

exports[`Update props with updated prop value 1`] = `
{
  "instanceId": [
    {
      "id": "propId",
      "prop": "a",
      "required": undefined,
      "type": "string",
      "value": "2",
    },
  ],
}
`;
